# AgentSynapse

./: README.md  pyproject.toml
AgentSynapse/: .env.example  .gitignore  __init__.py  requirements.txt
AgentSynapse/agents/orchestrator/: agentOrchestrator.py
AgentSynapse/agents/registry/: agentRegistry.py
AgentSynapse/api/: main.py
AgentSynapse/api/middleware/: authMiddleware.py
AgentSynapse/api/models/: requests.py
AgentSynapse/api/routes/: __init__.py  agentRoutes.py  memoryRoutes.py  toolRoutes.py
AgentSynapse/config/: settings.py
AgentSynapse/core/: __init__.py  agentEngine.py  asyncAgentExecutor.py  bedrockClient.py
AgentSynapse/examples/toolExamples/: pythonTool.py  yamlHttpTool.yaml
AgentSynapse/examples/usageExamples/: quickStart.py  sqlAgentSimpleDemo.py  toolWorkflow.py
AgentSynapse/memory/: __init__.py  baseMemoryManager.py  memoryManager.py
AgentSynapse/memory/episodicMemory/: dynamodbMemory.py
AgentSynapse/memory/proceduralMemory/: s3Storage.py
AgentSynapse/memory/semanticMemory/: knowledgeGraph.py  vectorStore.py
AgentSynapse/memory/workingMemory/: redisMemory.py
AgentSynapse/schemas/: __init__.py  baseSchemas.py
AgentSynapse/tests/: testAgentEngine.py  testMemoryManager.py
AgentSynapse/tools/executor/: toolExecutor.py
AgentSynapse/tools/prebuiltTools/: README.md  awsLambdaTool.yaml  biDashboardTool.yaml  etlLogInspector.py  lakehouseQueryTool.py  webSearchTool.py
AgentSynapse/tools/registry/: toolRegistry.py
AgentSynapse/tools/versioning/: toolVersioning.py
AgentSynapse/utils/: __init__.py  exceptions.py  logger.py  serialization.py
