[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AgentSynapse"
version = "1.0.0"
description = "ACE Framework (Agentic Context Engineering) for building production-ready AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sarvesh" }
]
keywords = ["ai", "agents", "framework", "aws", "bedrock", "multi-tenant"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.34",
    "aioboto3>=12.3.0",
    "aws-lambda-powertools>=2.31.0",
    "redis>=5.0.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "opensearch-py>=2.4.2",
    "sentence-transformers>=2.3.1",
    "numpy>=1.26.3",
    "aiohttp>=3.9.1",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "structlog>=24.1.0",
    "aws-xray-sdk>=2.12.1"
]

[project.optional-dependencies]
tests = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "moto>=5.0.0",
    "faker>=22.0.0"
]
dev = [
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0"
]

[project.urls]
Homepage = "https://github.com/Sarvesh-GanesanW/AgentSynapse"
Documentation = "https://github.com/Sarvesh-GanesanW/AgentSynapse#readme"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["AgentSynapse*"]
